--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -4,8 +4,8 @@
 <glade-interface>
   <widget class="GtkWindow" id="vmm-manager">
     <property name="title" translatable="yes">Virtual Machine Manager</property>
-    <property name="default_width">600</property>
-    <property name="default_height">500</property>
+    <property name="default_width">550</property>
+    <property name="default_height">550</property>
     <property name="gravity">GDK_GRAVITY_CENTER</property>
     <signal name="delete_event" handler="on_vm_manager_delete_event"/>
     <child>
@@ -338,7 +338,7 @@
                   <widget class="GtkTreeView" id="vm-list">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="rules_hint">True</property>
+                    <property name="rules_hint">False</property>
                     <signal name="button_press_event" handler="on_vm_list_button_press_event"/>
                     <signal name="row_collapsed" handler="on_vm_list_row_collapsed"/>
                     <signal name="row_expanded" handler="on_vm_list_row_expanded"/>
