addhardware: Fix error message syntax typo

--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -118,7 +118,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="menu_edit_delete">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Delete Virtual Machine</property>
+                        <property name="label" translatable="yes">Delete</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_menu_edit_delete_activate"/>
                         <child internal-child="image">
