create-net: Fix typo

--- a/src/vmm-create-net.glade
+++ b/src/vmm-create-net.glade
@@ -617,7 +617,7 @@
                                 <child>
                                   <widget class="GtkLabel" id="label387">
                                     <property name="visible">True</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Hint:&lt;/b&gt; The network should be choosen from one of the IPv4 private address ranges. eg 10.0.0.0/8,  172.16.0.0/12, or 192.168.0.0/16</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Hint:&lt;/b&gt; The network should be chosen from one of the IPv4 private address ranges. eg 10.0.0.0/8,  172.16.0.0/12, or 192.168.0.0/16</property>
                                     <property name="use_markup">True</property>
                                     <property name="wrap">True</property>
                                   </widget>
